--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             <div class="about-us body-box-item">
                 <div class="container about-us-box grid wide">
                     <div class="row" style="align-items: center;">
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <div class="image-box">
                                 <img src="assets/images/about-us.jpg" alt="" class="full-size-img">
                             </div>
                         </div>
-                        <div class="col l-8 text-center">
+                        <div class="col l-8 c-12 text-center">
                             <div class="about-us-content">
                                 <img src="assets/images/slider-ic.png" alt="">
                                 <h4 class="mt-3 header-content font-header ">Chào mừng bạn đến với Pizza Kitchen</h4>
@@ -112,7 +112,7 @@
                         <img class="mt-5" src="assets/images/section-seprator.png" alt="">
                     </div>
                     <div class="row menu-list-body">
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <a href="pizza.html" class="menu-list-link">
                                 <div class="menu-list-item ">
                                     <div class="menu-item-image image-box">
@@ -122,7 +122,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <a href="drink-water.html" class="menu-list-link">
                                 <div class="menu-list-item ">
                                     <div class="menu-item-image image-box">
@@ -132,7 +132,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <a href="fast-food.html" class="menu-list-link">
                                 <div class="menu-list-item ">
                                     <div class="menu-item-image image-box">
@@ -145,16 +145,13 @@
                     </div>
                 </div>
             </div>
-            <div class="pizza-product">
-                <div class="image-box">
-                    <img src="assets/images/order-bg.jpg" alt="" class="full-size-img">
-                </div>
+            <div class="pizza-product" style="background-image: url(assets/images/order-bg.jpg) ;">
                 <div class="pizza-product-box">
                     <div class="container text-center gird wide">
                         <h4 class="mt-3 header-content text-center font-italic primary-text-color font-header mb-4 ">Các loại Pizza nổi bật</h4>
                         <img src="assets/images/slider-ic.png"  alt="">
                         <div class="row pizza-product-list">
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-1.jpeg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -162,7 +159,7 @@
                                     <div class="pizza-product-name text-center font-header">Neapolitan pizza</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-2.jpg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -170,7 +167,7 @@
                                     <div class="pizza-product-name text-center font-header">Pizza Chicago</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-3.jpg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -178,7 +175,7 @@
                                     <div class="pizza-product-name text-center font-header">Pizza Phô Mai</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-4.jpg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -186,7 +183,7 @@
                                     <div class="pizza-product-name text-center font-header">Pizza California</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-5.jpg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -194,7 +191,7 @@
                                     <div class="pizza-product-name text-center font-header">Pizza Sicilian</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-6.jpg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -202,7 +199,7 @@
                                     <div class="pizza-product-name text-center font-header">Pizza Greek</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-7.jpg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -210,7 +207,7 @@
                                     <div class="pizza-product-name text-center font-header">Pizza Detroit</div>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 c-6">
                                 <div class="pizza-product-item mt-4">
                                     <div class="pizza-product-image">
                                         <figure><img src="assets/images/pizza-8.jpeg" alt="" class="full-size-img menu-img" style="border-radius: 0px;"> </figure>
@@ -224,7 +221,7 @@
                 </div>
             </div>
 
-            <div class="chef">
+            <div class="chef" >
                 <div class="top-right-img">
                     <img class="full-size-img" src="assets/images/process-top-img.png" alt="">
                 </div>
@@ -238,7 +235,7 @@
                     <p class="chef-desc">Đảm bảo sự hài lòng của quý khách hàng</p>
                     <img src="assets/images/section-seprator.png" alt="">
                     <div class="chef-list row">
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <div class="chef-item ">
                                 <div class="image-box">
                                     <img src="assets/images/team-1.png" alt="" class="full-size-img">
@@ -255,7 +252,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <div class="chef-item ">
                                 <div class="image-box">
                                     <img src="assets/images/team-2.png" alt="" class="full-size-img">
@@ -272,7 +269,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-4">
+                        <div class="col l-4 c-12">
                             <div class="chef-item ">
                                 <div class="image-box">
                                     <img src="assets/images/team-3.png" alt="" class="full-size-img">
@@ -296,7 +293,7 @@
             <div class="book-bg" style="background-image: url(assets/images/slider-1.jpg); background-size: cover; background-repeat: no-repeat;">
                 <div class="book" >
                     <div class="row height-center" >
-                        <div class="col l-o-2 l-5 p-lg-5">
+                        <div class="col l-o-2 c-12 l-5 p-lg-5">
                             <div class="book-form-bg" style="background-image: url(assets/images/orderform-bg.jpg); background-repeat: no-repeat; background-size: cover;">
                                 <div class="book-form text-center">
                                     <h4 class="book-form-header font-header">ĐIỀN ĐƠN ĐẶT HÀNG</h4>
@@ -308,13 +305,13 @@
                                         <textarea name="" id="" class="form-control form-input" placeholder="Thông tin loại bánh bạn muốn đặt (*) " rows="3"></textarea>
                                         <button class="btn btn-danger btn-send">Đặt hàng ngay</button>
                                     </div>
-                                    <img src="assets/images/order-man.png" class="order-man" alt="">
+                                    <img src="assets/images/order-man.png" class="order-man hidden-mobile" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="col l-5">
                             <div class="row about-us-list">
-                                <div class="col l-6">
+                                <div class="col l-6 c-6">
                                     <div class="about-us-item-box">
                                         <div class="about-us-item">
                                             <div class="about-us-icon">
@@ -327,7 +324,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col l-6">
+                                <div class="col l-6 c-6">
                                     <div class="about-us-item-box">
                                         <div class="about-us-item">
                                             <div class="about-us-icon">
@@ -340,7 +337,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col l-6">
+                                <div class="col l-6 c-6">
                                     <div class="about-us-item-box">
                                         <div class="about-us-item">
                                             <div class="about-us-icon">
@@ -353,7 +350,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col l-6">
+                                <div class="col l-6 c-6">
                                     <div class="about-us-item-box">
                                         <div class="about-us-item">
                                             <div class="about-us-icon">
@@ -379,7 +376,7 @@
                 <div class="footer-info">
                     <div class="container grid wide">
                         <div class="row">
-                            <div class="col l-4">
+                            <div class="col l-4 c-12">
                                 <div class="footer-item text-center">
                                     <div class="footer-logo header-logo">
                                         <img src="assets/images/Miwa_logo.png" alt="">
@@ -388,27 +385,27 @@
                                 </div>
                             </div>
                             
-                            <div class="col l-4">
+                            <div class="col l-4 c-12">
                                 <div class="footer-item pl-5">
                                     <h4 class="footer-item-header">Đường dẫn nhanh</h4>
                                     <div class="footer-item-list mt-5">
-                                        <a href="" class="footer-item-link">
+                                        <a href="index.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Trang chủ</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="recommend.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Giới Thiệu</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="pizza.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Sản phẩm</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="contaxt.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Liên Hệ</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="shopping_cart.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Giỏ hàng</span>
                                         </a>
@@ -416,8 +413,8 @@
                                 </div>
                             </div>
                             
-                            <div class="col l-4">
-                                <div class="footer-item">
+                            <div class="col l-4 c-12">
+                                <div class="footer-item pl-5">
                                     <h4 class="footer-item-header">Thông tin liên hệ</h4>
                                     <div class="footer-item-list mt-5">
                                         <a href="" class="footer-item-link">
