--- a/recommend.html
+++ b/recommend.html
@@ -125,7 +125,7 @@
                 <div class="footer-info">
                     <div class="container grid wide">
                         <div class="row">
-                            <div class="col l-4">
+                            <div class="col l-4 c-12">
                                 <div class="footer-item text-center">
                                     <div class="footer-logo header-logo">
                                         <img src="assets/images/Miwa_logo.png" alt="">
@@ -134,27 +134,27 @@
                                 </div>
                             </div>
                             
-                            <div class="col l-4">
+                            <div class="col l-4 c-12">
                                 <div class="footer-item pl-5">
                                     <h4 class="footer-item-header">Đường dẫn nhanh</h4>
                                     <div class="footer-item-list mt-5">
-                                        <a href="" class="footer-item-link">
+                                        <a href="index.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Trang chủ</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="recommend.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Giới Thiệu</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="pizza.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Sản phẩm</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="contaxt.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Liên Hệ</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="shopping_cart.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Giỏ hàng</span>
                                         </a>
@@ -162,8 +162,8 @@
                                 </div>
                             </div>
                             
-                            <div class="col l-4">
-                                <div class="footer-item">
+                            <div class="col l-4 c-12">
+                                <div class="footer-item pl-5">
                                     <h4 class="footer-item-header">Thông tin liên hệ</h4>
                                     <div class="footer-item-list mt-5">
                                         <a href="" class="footer-item-link">
