--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -107,9 +107,10 @@
                                                     </div>
                                                     <div class="col l-4 text-center">
                                                         <div class="cart-quantity">
-                                                            <span class="change-qty decre-number">-</span>
-                                                            <input class="cart-number" type="text" value="1" disabled>
-                                                            <span class="change-qty cre-number ">+</span>
+                                                            <span class="change-qty hidden-mobile decre-number">-</span>
+                                                            <input class="cart-number hidden-pc" type="text" value="1" >
+                                                            <input class="cart-number hidden-mobile" type="text" value="1" disabled>
+                                                            <span class="change-qty hidden-mobile cre-number ">+</span>
                                                         </div>
                                                     </div>
                                                     <div class="col l-4 text-center border-left">
@@ -143,9 +144,10 @@
                                                     </div>
                                                     <div class="col l-4 text-center">
                                                         <div class="cart-quantity">
-                                                            <span class="change-qty decre-number">-</span>
-                                                            <input class="cart-number" type="text" value="1" disabled>
-                                                            <span class="change-qty cre-number ">+</span>
+                                                            <span class="change-qty hidden-mobile decre-number">-</span>
+                                                            <input class="cart-number hidden-pc" type="text" value="1" >
+                                                            <input class="cart-number hidden-mobile" type="text" value="1" disabled>
+                                                            <span class="change-qty hidden-mobile cre-number ">+</span>
                                                         </div>
                                                     </div>
                                                     <div class="col l-4 text-center border-left">
@@ -179,9 +181,10 @@
                                                     </div>
                                                     <div class="col l-4 text-center">
                                                         <div class="cart-quantity">
-                                                            <span class="change-qty decre-number">-</span>
-                                                            <input class="cart-number" type="text" value="1" disabled>
-                                                            <span class="change-qty cre-number ">+</span>
+                                                            <span class="change-qty hidden-mobile decre-number">-</span>
+                                                            <input class="cart-number hidden-pc" type="text" value="1" >
+                                                            <input class="cart-number hidden-mobile" type="text" value="1" disabled>
+                                                            <span class="change-qty hidden-mobile cre-number ">+</span>
                                                         </div>
                                                     </div>
                                                     <div class="col l-4 text-center border-left">
@@ -215,9 +218,10 @@
                                                     </div>
                                                     <div class="col l-4 text-center">
                                                         <div class="cart-quantity">
-                                                            <span class="change-qty decre-number">-</span>
-                                                            <input class="cart-number" type="text" value="1" disabled>
-                                                            <span class="change-qty cre-number ">+</span>
+                                                            <span class="change-qty hidden-mobile decre-number">-</span>
+                                                            <input class="cart-number hidden-pc" type="text" value="1" >
+                                                            <input class="cart-number hidden-mobile" type="text" value="1" disabled>
+                                                            <span class="change-qty hidden-mobile cre-number ">+</span>
                                                         </div>
                                                     </div>
                                                     <div class="col l-4 text-center border-left">
@@ -286,7 +290,7 @@
                 <div class="footer-info">
                     <div class="container grid wide">
                         <div class="row">
-                            <div class="col l-4">
+                            <div class="col l-4 c-12">
                                 <div class="footer-item text-center">
                                     <div class="footer-logo header-logo">
                                         <img src="assets/images/Miwa_logo.png" alt="">
@@ -295,27 +299,27 @@
                                 </div>
                             </div>
                             
-                            <div class="col l-4">
+                            <div class="col l-4 c-12">
                                 <div class="footer-item pl-5">
                                     <h4 class="footer-item-header">Đường dẫn nhanh</h4>
                                     <div class="footer-item-list mt-5">
-                                        <a href="" class="footer-item-link">
+                                        <a href="index.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Trang chủ</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="recommend.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Giới Thiệu</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="pizza.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Sản phẩm</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="contaxt.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Liên Hệ</span>
                                         </a>
-                                        <a href="" class="footer-item-link">
+                                        <a href="shopping_cart.html" class="footer-item-link">
                                             <i class="fa-solid fa-circle-check text-success"></i>
                                             <span class="footer-item-desc">Giỏ hàng</span>
                                         </a>
@@ -323,8 +327,8 @@
                                 </div>
                             </div>
                             
-                            <div class="col l-4">
-                                <div class="footer-item">
+                            <div class="col l-4 c-12">
+                                <div class="footer-item pl-5">
                                     <h4 class="footer-item-header">Thông tin liên hệ</h4>
                                     <div class="footer-item-list mt-5">
                                         <a href="" class="footer-item-link">
@@ -345,7 +349,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>    
         </div>
         <iframe style="width: 100%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3779.6884832427527!2d105.67642291461303!3d18.67796996921692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3139ce71bd1f4147%3A0xad7d01d1f539f601!2zMzggS2ltIMSQ4buTbmcsIEjGsG5nIELDrG5oLCBUaMOgbmggcGjhu5EgVmluaCwgTmdo4buHIEFuLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1668423711059!5m2!1svi!2s"height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="back-top"><img class="back-top-img" src="assets/images/arow-up-2.jpg" alt=""></div>
